# LTBL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  platformio.ini
.github/workflows/: platformio.yml  tests.yml
docs/: notes.md
elec/: README.md  notes.md  parts.md
elec/schematics/: ESP8266-LTBL.sch
examples/: CMakeLists.txt
examples/logger_example/: CMakeLists.txt  main.cpp
research/: esp.md  prog-examples.md
research/example1/: README.md  example1.c
research/web-example/: HttpRequest.cxx  HttpRequest.hxx  Makefile  Relay.cxx  Relay.hxx  main.cxx  remoteRequest.cxx  remoteRequest.hxx  webpage.html  webpage1.html
simon/: SIMOOOOON.md
software/docs/: CMakeLists.txt  Doxyfile.in
software/inc/: HttpRequest.hpp  Logger.hpp  Relay.hpp  Switch.hpp  def.h  elec.hpp  webtools.hpp  wificallbacks.hpp
software/src/: HttpRequest.cpp  Logger.cpp  Relay.cpp  Switch.cpp  main.cpp  webpage.cpp  webpage.hpp  webtools.cpp  wificallbacks.cpp
software/tests/: CMakeLists.txt  tests_Relay.cpp  tests_Relay.cxx  tests_Relay.hpp  tests_main.cpp  tests_main.cxx
